Add Timeshare Help Center project

--- a/index.html
+++ b/index.html
@@ -319,7 +319,30 @@
                     </div>
                 </div>
 
-                <!-- Project 3: Employee Hub API -->
+                <!-- Project 3: Timeshare Help Center -->
+                <div class="card-hover bg-dark rounded-xl overflow-hidden border border-gray-800">
+                    <div class="h-48 bg-gradient-to-br from-sky-500 to-blue-700 flex items-center justify-center">
+                        <svg class="w-16 h-16 text-white/80" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4"></path></svg>
+                    </div>
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold mb-2">Timeshare Help Center</h3>
+                        <p class="text-gray-400 text-sm mb-4">Full website with contract upload system, interactive calculators, FAQ sections, and integrated contact forms for timeshare exit services.</p>
+                        <div class="flex flex-wrap gap-2 mb-4">
+                            <span class="px-2 py-1 bg-cyan-500/10 text-cyan-400 rounded text-xs">HTML/CSS</span>
+                            <span class="px-2 py-1 bg-yellow-500/10 text-yellow-400 rounded text-xs">JavaScript</span>
+                            <span class="px-2 py-1 bg-green-500/10 text-green-400 rounded text-xs">Node.js</span>
+                            <span class="px-2 py-1 bg-orange-500/10 text-orange-400 rounded text-xs">AWS S3</span>
+                        </div>
+                        <div class="flex gap-3">
+                            <a href="https://www.timesharehelpcenter.com" target="_blank" class="text-gray-400 hover:text-white text-sm flex items-center gap-1">
+                                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path></svg>
+                                Live Site
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Project 4: Employee Hub API -->
                 <div class="card-hover bg-dark rounded-xl overflow-hidden border border-gray-800">
                     <div class="h-48 bg-gradient-to-br from-green-500 to-teal-600 flex items-center justify-center">
                         <svg class="w-16 h-16 text-white/80" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"></path></svg>
