--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
                 </a>
                 <a href="#contact" class="border border-gray-700 hover:border-primary px-8 py-4 rounded-lg font-medium transition">Get In Touch</a>
+                <a href="Omar_Thompson_Resume.pdf" download class="border border-gray-700 hover:border-secondary px-8 py-4 rounded-lg font-medium transition flex items-center justify-center gap-2">
+                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path></svg>
+                    <span>Download Resume</span>
+                </a>
             </div>
             <div class="flex justify-center gap-6">
                 <a href="https://github.com/thoomar" target="_blank" class="text-gray-500 hover:text-white transition">
