Add OG social card image for LinkedIn

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://omarthompson.netlify.app/">
     <meta property="og:title" content="Omar Thompson | Full Stack Developer">
     <meta property="og:description" content="Full Stack Developer portfolio showcasing projects built with JavaScript, Python, Flask, React, and AWS.">
-    <meta property="og:image" content="https://omarthompson.netlify.app/images/profile.jpg">
+    <meta property="og:image" content="https://omarthompson.netlify.app/images/og-image.png">
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
