--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 <div class="hidden md:flex space-x-8">
                     <a href="#about" class="text-gray-400 hover:text-white transition">About</a>
                     <a href="#skills" class="text-gray-400 hover:text-white transition">Skills</a>
+                    <a href="#case-study" class="text-gray-400 hover:text-white transition">Case Study</a>
                     <a href="#projects" class="text-gray-400 hover:text-white transition">Projects</a>
                     <a href="#experience" class="text-gray-400 hover:text-white transition">Experience</a>
                     <a href="#contact" class="text-gray-400 hover:text-white transition">Contact</a>
@@ -282,12 +283,213 @@
         </div>
     </section>
 
+    <!-- Featured Case Study Section -->
+    <section id="case-study" class="py-24 px-6">
+        <div class="max-w-6xl mx-auto">
+            <div class="text-center mb-12">
+                <span class="inline-block px-4 py-2 bg-secondary/10 text-secondary rounded-full text-sm font-medium mb-4">Featured Case Study</span>
+                <h2 class="text-3xl md:text-4xl font-bold mb-4">Live Sales Tracker</h2>
+                <p class="text-gray-400 max-w-2xl mx-auto">Internal Sales Analytics Platform</p>
+            </div>
+
+            <div class="bg-gradient-to-br from-dark to-darker rounded-2xl border border-gray-800 overflow-hidden">
+                <!-- Hero Banner -->
+                <div class="h-48 md:h-64 bg-gradient-to-br from-emerald-600 via-teal-600 to-cyan-700 flex items-center justify-center relative overflow-hidden">
+                    <div class="absolute inset-0 opacity-20">
+                        <div class="absolute top-4 left-4 w-32 h-32 border border-white/30 rounded-lg"></div>
+                        <div class="absolute bottom-4 right-4 w-48 h-24 border border-white/30 rounded-lg"></div>
+                        <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-64 h-40 border border-white/20 rounded-lg"></div>
+                    </div>
+                    <div class="text-center z-10">
+                        <svg class="w-16 h-16 mx-auto mb-4 text-white/90" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path></svg>
+                        <p class="text-white/80 text-sm font-medium">Real-time KPI Dashboard</p>
+                    </div>
+                </div>
+
+                <div class="p-8 md:p-12">
+                    <!-- Overview -->
+                    <div class="mb-10">
+                        <h3 class="text-xl font-semibold mb-4 flex items-center gap-2">
+                            <span class="w-8 h-8 bg-primary/20 rounded-lg flex items-center justify-center text-primary text-sm">01</span>
+                            Overview
+                        </h3>
+                        <p class="text-gray-400 leading-relaxed">
+                            Live Sales Tracker is an internal, real-time sales performance dashboard I designed and built to replace manual CRM reporting and spreadsheets. It integrates directly with Zoho CRM via OAuth2 to provide enrollment specialists, closers, and managers with live visibility into KPIs, deal progress, and commissions—all without leaving the platform.
+                        </p>
+                    </div>
+
+                    <!-- Problem & Solution Grid -->
+                    <div class="grid md:grid-cols-2 gap-8 mb-10">
+                        <div class="bg-red-500/5 border border-red-500/20 rounded-xl p-6">
+                            <h3 class="text-lg font-semibold mb-3 flex items-center gap-2 text-red-400">
+                                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"></path></svg>
+                                The Problem
+                            </h3>
+                            <p class="text-gray-400 text-sm leading-relaxed">
+                                Sales reporting relied on manual Zoho exports and spreadsheets, resulting in delayed metrics, limited visibility for reps, and unnecessary manager involvement for basic performance tracking. Reps couldn't see their own numbers without asking.
+                            </p>
+                        </div>
+                        <div class="bg-green-500/5 border border-green-500/20 rounded-xl p-6">
+                            <h3 class="text-lg font-semibold mb-3 flex items-center gap-2 text-green-400">
+                                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                                The Solution
+                            </h3>
+                            <p class="text-gray-400 text-sm leading-relaxed">
+                                I designed and built a full-stack analytics platform that syncs CRM data in near real-time and presents role-based KPI dashboards tailored to different sales roles—giving everyone instant access to the metrics that matter to them.
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- Key Features -->
+                    <div class="mb-10">
+                        <h3 class="text-xl font-semibold mb-4 flex items-center gap-2">
+                            <span class="w-8 h-8 bg-primary/20 rounded-lg flex items-center justify-center text-primary text-sm">02</span>
+                            Key Features
+                        </h3>
+                        <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
+                            <div class="bg-darker p-4 rounded-lg border border-gray-800">
+                                <div class="text-secondary mb-2">
+                                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"></path></svg>
+                                </div>
+                                <p class="text-sm text-gray-300">Real-time KPI dashboards with consultations, shows, no-shows, and funded volume</p>
+                            </div>
+                            <div class="bg-darker p-4 rounded-lg border border-gray-800">
+                                <div class="text-secondary mb-2">
+                                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0z"></path></svg>
+                                </div>
+                                <p class="text-sm text-gray-300">Role-based views for enrollment specialists, closers, and managers</p>
+                            </div>
+                            <div class="bg-darker p-4 rounded-lg border border-gray-800">
+                                <div class="text-secondary mb-2">
+                                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path></svg>
+                                </div>
+                                <p class="text-sm text-gray-300">Trend comparisons against historical performance periods</p>
+                            </div>
+                            <div class="bg-darker p-4 rounded-lg border border-gray-800">
+                                <div class="text-secondary mb-2">
+                                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path></svg>
+                                </div>
+                                <p class="text-sm text-gray-300">Drill-down access to individual records with direct Zoho links</p>
+                            </div>
+                            <div class="bg-darker p-4 rounded-lg border border-gray-800">
+                                <div class="text-secondary mb-2">
+                                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                                </div>
+                                <p class="text-sm text-gray-300">Automated commission calculations (2% on funded volume)</p>
+                            </div>
+                            <div class="bg-darker p-4 rounded-lg border border-gray-800">
+                                <div class="text-secondary mb-2">
+                                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"></path></svg>
+                                </div>
+                                <p class="text-sm text-gray-300">Near real-time Zoho CRM sync via OAuth2 webhooks</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Tech Stack -->
+                    <div class="mb-10">
+                        <h3 class="text-xl font-semibold mb-4 flex items-center gap-2">
+                            <span class="w-8 h-8 bg-primary/20 rounded-lg flex items-center justify-center text-primary text-sm">03</span>
+                            Tech Stack
+                        </h3>
+                        <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-4">
+                            <div>
+                                <p class="text-xs text-gray-500 uppercase tracking-wider mb-2">Frontend</p>
+                                <div class="flex flex-wrap gap-2">
+                                    <span class="px-2 py-1 bg-blue-500/10 text-blue-400 rounded text-xs">Next.js 14</span>
+                                    <span class="px-2 py-1 bg-cyan-500/10 text-cyan-400 rounded text-xs">React</span>
+                                    <span class="px-2 py-1 bg-blue-500/10 text-blue-400 rounded text-xs">TypeScript</span>
+                                    <span class="px-2 py-1 bg-cyan-500/10 text-cyan-400 rounded text-xs">TailwindCSS</span>
+                                    <span class="px-2 py-1 bg-purple-500/10 text-purple-400 rounded text-xs">Recharts</span>
+                                </div>
+                            </div>
+                            <div>
+                                <p class="text-xs text-gray-500 uppercase tracking-wider mb-2">Backend</p>
+                                <div class="flex flex-wrap gap-2">
+                                    <span class="px-2 py-1 bg-green-500/10 text-green-400 rounded text-xs">FastAPI</span>
+                                    <span class="px-2 py-1 bg-yellow-500/10 text-yellow-400 rounded text-xs">Python</span>
+                                    <span class="px-2 py-1 bg-blue-500/10 text-blue-400 rounded text-xs">SQLAlchemy</span>
+                                    <span class="px-2 py-1 bg-orange-500/10 text-orange-400 rounded text-xs">Pydantic</span>
+                                </div>
+                            </div>
+                            <div>
+                                <p class="text-xs text-gray-500 uppercase tracking-wider mb-2">Database</p>
+                                <div class="flex flex-wrap gap-2">
+                                    <span class="px-2 py-1 bg-blue-500/10 text-blue-400 rounded text-xs">PostgreSQL</span>
+                                    <span class="px-2 py-1 bg-purple-500/10 text-purple-400 rounded text-xs">Alembic</span>
+                                </div>
+                            </div>
+                            <div>
+                                <p class="text-xs text-gray-500 uppercase tracking-wider mb-2">Infrastructure</p>
+                                <div class="flex flex-wrap gap-2">
+                                    <span class="px-2 py-1 bg-orange-500/10 text-orange-400 rounded text-xs">AWS EC2</span>
+                                    <span class="px-2 py-1 bg-blue-500/10 text-blue-400 rounded text-xs">Docker</span>
+                                    <span class="px-2 py-1 bg-green-500/10 text-green-400 rounded text-xs">Nginx</span>
+                                    <span class="px-2 py-1 bg-red-500/10 text-red-400 rounded text-xs">Zoho OAuth2</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Impact -->
+                    <div class="mb-10">
+                        <h3 class="text-xl font-semibold mb-4 flex items-center gap-2">
+                            <span class="w-8 h-8 bg-primary/20 rounded-lg flex items-center justify-center text-primary text-sm">04</span>
+                            Impact & Results
+                        </h3>
+                        <div class="grid sm:grid-cols-2 gap-4">
+                            <div class="flex items-start gap-3">
+                                <div class="w-2 h-2 bg-secondary rounded-full mt-2"></div>
+                                <p class="text-gray-400 text-sm"><span class="text-white font-medium">Eliminated manual reporting</span> — No more daily spreadsheet exports from Zoho CRM</p>
+                            </div>
+                            <div class="flex items-start gap-3">
+                                <div class="w-2 h-2 bg-secondary rounded-full mt-2"></div>
+                                <p class="text-gray-400 text-sm"><span class="text-white font-medium">Self-serve KPI tracking</span> — Reps check their own metrics without manager help</p>
+                            </div>
+                            <div class="flex items-start gap-3">
+                                <div class="w-2 h-2 bg-secondary rounded-full mt-2"></div>
+                                <p class="text-gray-400 text-sm"><span class="text-white font-medium">Reduced operational overhead</span> — Managers freed from routine reporting tasks</p>
+                            </div>
+                            <div class="flex items-start gap-3">
+                                <div class="w-2 h-2 bg-secondary rounded-full mt-2"></div>
+                                <p class="text-gray-400 text-sm"><span class="text-white font-medium">Faster decision-making</span> — Real-time data enables immediate course corrections</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- What I'm Proud Of -->
+                    <div class="bg-gradient-to-r from-primary/10 to-secondary/10 rounded-xl p-6 border border-primary/20">
+                        <h3 class="text-lg font-semibold mb-3 flex items-center gap-2">
+                            <svg class="w-5 h-5 text-primary" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z"></path></svg>
+                            What I'm Most Proud Of
+                        </h3>
+                        <p class="text-gray-400 leading-relaxed">
+                            Building a system that sales teams actually adopted because it was fast, accurate, and easy to use—replacing workflows that had been relied on for years. The best validation was hearing reps say they check their dashboard first thing every morning.
+                        </p>
+                    </div>
+
+                    <!-- CTA -->
+                    <div class="mt-8 pt-8 border-t border-gray-800 flex flex-wrap gap-4">
+                        <span class="text-gray-500 text-sm flex items-center gap-2">
+                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"></path></svg>
+                            Private Repository (Internal Tool)
+                        </span>
+                        <a href="https://github.com/thoomar/live-sales-tracker" target="_blank" class="text-primary hover:text-blue-400 text-sm flex items-center gap-2 transition">
+                            <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
+                            View on GitHub
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Projects Section -->
     <section id="projects" class="py-24 px-6">
         <div class="max-w-6xl mx-auto">
             <div class="text-center mb-16">
-                <h2 class="text-3xl md:text-4xl font-bold mb-4">Featured Projects</h2>
-                <p class="text-gray-400 max-w-2xl mx-auto">Real-world applications I've built and deployed</p>
+                <h2 class="text-3xl md:text-4xl font-bold mb-4">More Projects</h2>
+                <p class="text-gray-400 max-w-2xl mx-auto">Other applications I've built and deployed</p>
             </div>
 
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
